*** empty log message ***

--- a/Makefile.in
+++ b/Makefile.in
@@ -91,7 +91,7 @@ INSTALL_DATA_DIR = ${INSTALL} -d -m 755
 INSTALL_PROGRAM	= ${INSTALL} -m 555
 INSTALL_DATA	= ${INSTALL} -m 444
 INSTALL_SCRIPT	= ${INSTALL_PROGRAM}
-INSTALL_LIBRARY	= ${INSTALL_DATA}
+INSTALL_LIBRARY	= ${INSTALL} -m 644
 
 PACKAGE_NAME	= @PACKAGE_NAME@
 PACKAGE_VERSION	= @PACKAGE_VERSION@
@@ -181,7 +181,7 @@ COMPILE		= $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(C
 # for the BINARIES that you specified above have already been done.
 #========================================================================
 
-all: binaries libraries doc
+all: binaries libraries #doc
 
 #========================================================================
 # The binaries target builds executable programs, Windows .dll's, unix
@@ -206,7 +206,7 @@ doc:
 	@echo "        xml2nroff sample.xml > sample.n"
 	@echo "        xml2html sample.xml > sample.html"
 
-install: all install-binaries install-libraries install-doc
+install: all install-binaries install-libraries #install-doc
 
 install-binaries: binaries install-lib-binaries install-bin-binaries
 
