--- a/configure.ac
+++ b/configure.ac
@@ -92,6 +92,7 @@ TEA_ADD_TCL_SOURCES([])
 #--------------------------------------------------------------------
 
 #CLEANFILES="$CLEANFILES pkgIndex.tcl"
+CLEANFILES="$CLEANFILES tclsignalConfig.sh"
 if test "${TEA_PLATFORM}" = "windows" ; then
     # Ensure no empty if clauses
     :
