--- a/Makefile.in
+++ b/Makefile.in
@@ -187,7 +187,7 @@ VALGRINDARGS	= --tool=memcheck --num-callers=8 --leak-resolution=high \
 # for the BINARIES that you specified above have already been done.
 #========================================================================
 
-all: binaries libraries #doc
+all: binaries libraries doc
 
 #========================================================================
 # The binaries target builds executable programs, Windows .dll's, unix
